# mock-itr-scenario-mcp

./: .gitignore  README.md  pyproject.toml
src/mock_itr_scenario_mcp/: __init__.py  server.py
src/mock_itr_scenario_mcp/models/: __init__.py  enums.py  scenario.py
src/mock_itr_scenario_mcp/resources/: __init__.py
src/mock_itr_scenario_mcp/tools/: __init__.py
templates/: README.md  TPL_CORP_ERR_NO_TAX_RETURN.json  TPL_CORP_NORMAL.json  TPL_ERR_ALREADY_REFUNDED.json  TPL_ERR_AUTH_EXPIRED.json  TPL_ERR_CALC_ERROR.json  TPL_ERR_INVALID_SSN.json  TPL_ERR_LOGIN.json  TPL_ERR_NOT_COMPLETE.json  TPL_ERR_NO_CONT_BIZ.json  TPL_ERR_NO_TAX_RETURN.json  TPL_ERR_SESSION_EXPIRED.json  TPL_NON_BIZ_CAPITAL_GAINS.json  TPL_NON_BIZ_NOT_ELIGIBLE.json  TPL_NON_BIZ_NO_BIZ_IN_PERIOD.json  TPL_NON_BIZ_NO_REFUND.json  TPL_NORMAL_BIZ_HIGH.json  TPL_NORMAL_BIZ_LOW.json  TPL_NORMAL_NON_BIZ.json  TPL_NO_REFUND.json  TPL_SLOW_RESPONSE.json  TPL_WITH_PROGRESS.json
tests/: __init__.py  test_server.py
