[project]
name = "mock-itr-scenario-mcp"
version = "0.1.0"
description = "MCP server for creating and managing Mock ItrLoader scenarios"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Danny", email = "danny@zenterprise.co.kr" }
]
keywords = ["mcp", "mock", "scenario", "testing"]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "boto3-stubs[dynamodb]>=1.34.0",
]

[project.scripts]
mock-itr-scenario-mcp = "mock_itr_scenario_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mock_itr_scenario_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
